# openclose

./: .config.toml.example  .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: guide-agents-customization.md  guide-browser-automation.md  guide-jobs.md  guide-recorder.md  guide-skills.md
src/openclose/: __init__.py  __main__.py  debug.py  flag.py  id.py  log.py
src/openclose/agent/: __init__.py  agent.py  loop.py  prompt.py
src/openclose/bus/: __init__.py  bus.py
src/openclose/cli/: cli.py
src/openclose/config/: __init__.py  agents.py  config.py  paths.py  schema.py
src/openclose/file/: __init__.py  binary.py  diff.py  ignore.py  watcher.py
src/openclose/format/: __init__.py  formatter.py
src/openclose/jobs/: __init__.py  cron_nl.py  notify.py  runner.py  scheduler.py  schema.py  storage.py
src/openclose/patch/: __init__.py  patch.py
src/openclose/permission/: __init__.py  broker.py  extract.py  permission.py  rules.py  schema.py
src/openclose/project/: __init__.py  project.py  snapshot.py  worktree.py
src/openclose/provider/: __init__.py  auth.py  models.py  provider.py
src/openclose/recorder/: __init__.py  chunk_annotator.py  chunker.py  events.py  merger.py  recorder.py  screencast.py  storage.py  task_builder.py
tests/: conftest.py  test_agent.py  test_agent_loop.py  test_auth_api_key.py  test_browser_automation_helpers.py  test_bus.py  test_cli.py  test_cli_coverage.py  test_cli_extended.py  test_config.py  test_coverage_boost.py  test_coverage_gaps.py  test_deliver_message.py  test_edge_coverage.py  test_file.py  test_format.py  test_format_extended.py  test_id.py  test_jobs_cron_nl.py  test_jobs_notify.py  test_jobs_runner.py  test_jobs_scheduler.py  test_jobs_storage.py  test_loop_coverage.py  test_more_coverage.py  test_more_tools.py  test_parallel_tool_calls.py  test_patch.py  test_permission_broker.py  test_permissions.py  test_plan.py  test_platform_compat.py  test_project.py  test_provider.py  test_provider_factory.py  test_remaining_coverage.py  test_routes_extended.py  test_routes_helpers.py  test_scheduler.py  test_server.py  (+10 more)
(+55 files in other folders)
